[INT-111], [INT-112] - small styles fixes (#19)
* [INT-212] fix misalignment of back button

* [INT-211] fix ContactCard styles

--- a/src/components/ContactCard/styles.scss
+++ b/src/components/ContactCard/styles.scss
@@ -15,6 +15,13 @@
 		flex-direction: row;
 		justify-content: flex-start;
 		margin-bottom: 8px;
+		font-family: var(--common-font);
+		font-style: normal;
+		font-weight: normal;
+		font-size: 12px;
+		line-height: 16px;
+		letter-spacing: -0.15px;
+		color: var(--gray-70);
 	}
 
 	.contact-card-body-line-text {
