--- a/src/views/ContactDetails/styles.scss
+++ b/src/views/ContactDetails/styles.scss
@@ -4,6 +4,7 @@
 	justify-content: space-between;
 	align-items: center;
 	height: 61px;
+	padding-left: 16px;
 }
 
 .details-main-info {
